@@ -260,26 +260,6 @@ Miscellaneous
     the PyTables' class discoverer function for general HDF5 files).
 
 
-.. data:: MAX_THREADS
-
-    The maximum number of threads that PyTables should use internally (mainly
-    in Blosc and Numexpr currently).  If None, it is automatically set to the
-    number of cores in your machine. In general, it is a good idea to set
-    this to the number of cores in your machine or, when your machine has
-    many of them (e.g. > 4), perhaps one less than this.
-
-    .. note::
-
-        currently MAX_THREADS is only used as a fall-back if
-        :data:`tables.parameters.MAX_NUMEXPR_THREADS` or
-        :data:`tables.parameters.MAX_BLOSC_THREADS` are not set.
-
-    .. deprecated:: 2.4
-
-        Use :data:`tables.parameters.MAX_NUMEXPR_THREADS` or
-        :data:`tables.parameters.MAX_BLOSC_THREADS` instead.
-
-
 .. data:: MAX_NUMEXPR_THREADS
 
     The maximum number of threads that PyTables should use internally in
