@@ -207,26 +207,6 @@ system attributes are not considered for guessing the class of the node
 during its loading from disk (this work is delegated to the PyTables'
 class discoverer function for general HDF5 files)."""
 
-MAX_THREADS = None
-"""The maximum number of threads that PyTables should use internally
-(mainly in Blosc and Numexpr currently).  If `None`, it is automatically
-set to the number of cores in your machine. In general, it is a good
-idea to set this to the number of cores in your machine or, when your
-machine has many of them (e.g. > 4), perhaps one less than this.
-
-.. note::
-
-    currently MAX_THREADS is only used as a fall-back if
-    :data:`tables.parameters.MAX_NUMEXPR_THREADS` or
-    :data:`tables.parameters.MAX_BLOSC_THREADS` are not set.
-
-.. deprecated:: 2.4
-
-    Use :data:`tables.parameters.MAX_NUMEXPR_THREADS` or
-    :data:`tables.parameters.MAX_BLOSC_THREADS` instead.
-
-"""
-
 MAX_NUMEXPR_THREADS = None
 """The maximum number of threads that PyTables should use internally in
 Numexpr.  If `None`, it is automatically set to the number of cores in
