@@ -13,12 +13,21 @@ Changes from 2.4 to X.Y.Z (in development)
 API changes
 -----------
 
+Many deprecated features and support for obsolete modules has been dropped:
+
 - The deprecated :data:`is_pro` module constant has been removed
+
 - The nra module and support for the obsolete numarray module has been removed.
   The *numarry* flavor is no more supported as well (closes :issue:`107`).
+
 - Support for the obsolete Numeric module has been removed.
   The *numeric* flavor is no more available (closes :issue:`108`).
+
 - The tables.netcdf3 module has been removed (closes :issue:`68`).
+
+- The :data:`parameters.MAX_THREADS` configuration parameter has been dropped
+  in favour of :data:`parameters.MAX_BLOSC_THREADS` and
+  :data:`parameters.MAX_NUMEXPR_THREADS` (closes :issue:`147`).
 
 
 Changes from 2.3.1 to 2.4
